--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<a href="/sitemap/">LabMap</a>
 <!-- end custom footer snippets -->
